Ubah Posisi Menjadi Center

--- a/latihan.html
+++ b/latihan.html
@@ -7,8 +7,10 @@
         <title>Document</title>
     </head>
     <body>
-        <h1>
-            Latihan
-        </h1>
+        <center>
+            <h1>
+                Latihan
+            </h1>
+        </center>
     </body>
 </html>
