--- a/latihan.html
+++ b/latihan.html
@@ -14,7 +14,7 @@
         </center>
         <hr>
         <p>
-            Selamat Datang
+            <b>Selamat Datang</b>
         </p>
     </body>
 </html>
