Menambahkan sumber image

--- a/latihan.html
+++ b/latihan.html
@@ -17,6 +17,6 @@
             <b>Selamat Datang</b>
         </p>
         <br>
-        <img src="" alt="">
+        <img src="gambar.jpg" alt="">
     </body>
 </html>
